Fixing layout/design issues - needs work on mobile responsiness

--- a/src/index.css
+++ b/src/index.css
@@ -77,14 +77,15 @@ nav li {
   font-family: "Yeseva One";
 }
 
-.me {
+#me {
   border-radius: 50%;
-  max-width: 50%;
-  margin-left: 100px;
+  width: 55%;
+  margin-left: 150px;
+  margin-bottom: 170px;
 }
 
 .about {
-  padding: 100px 50px 0px 50px;
+  padding: 170px 50px 0px 50px;
   display: flex;
 }
 
@@ -257,8 +258,9 @@ figure.snip0016:hover figcaption::before {
   text-align: center;
   max-width: 300px;
   margin: 20px auto;
-  padding-top: 100px;
+  padding-top: 50px;
   font-family: "Yeseva One";
+  padding-bottom: 20px;
 }
 
 Form {
@@ -271,30 +273,21 @@ Form {
 
 /* media query for tables and smaller */
 @media screen and (max-width: 768px) {
-  section {
-    padding: 30px 15px;
+  .container {
+    width: 50%;
   }
 
-  .step h3 {
-    flex: 1 100%;
-    text-align: center;
+  .me {
+    width: 300%;
+    align-items: center;
   }
 
-  .step-info {
-    flex: 2 100%;
-    text-align: center;
-    justify-content: center;
+  .summary {
+    padding-bottom: 100px;
   }
 
-  .step-img {
-    flex: 0 32%;
-    margin-right: 0;
-    margin-top: 15px;
-    margin-bottom: 15px;
-  }
-
-  .step-text {
-    flex: 100%;
+  .social-icon {
+    vertical-align: center;
   }
 }
 
@@ -304,27 +297,15 @@ Form {
     width: 50%;
   }
 
-  .section-title {
-    width: 95%;
+  .me {
+    /* width: 300%; */
   }
 
-  .intro p {
-    width: 100%;
+  .summary {
+    padding-bottom: 100px;
   }
 
-  .trainer {
-    flex: 0 100%;
-  }
-
-  .contact-info {
-    text-align: center;
-  }
-
-  .contact-info > * {
-    flex: 0 100%;
-  }
-
-  .contact-form {
-    order: 3;
+  .social-icon {
+    vertical-align: center;
   }
 }
